syntax = "proto3";

package search;

option go_package = "./search";

message SearchRequest {
  string query = 1;
  string user_id = 2; // optional for personalized results
  repeated string types = 3; // articles, habits, goals, conversations, profiles
  string category = 4; // optional filter
  int32 limit = 5;
  int32 offset = 6;
}

message SearchResponse {
  repeated SearchResult results = 1;
  int32 total = 2;
  map<string, int32> counts = 3; // count by type
}

message SearchResult {
  string id = 1;
  string type = 2; // article, habit, goal, conversation, profile
  string title = 3;
  string description = 4;
  string url = 5;
  map<string, string> metadata = 6;
  float score = 7;
  string highlighted = 8;
}

message GetSearchSuggestionsRequest {
  string query = 1;
  string user_id = 2; // optional
  int32 limit = 3;
}

message GetSearchSuggestionsResponse {
  repeated string suggestions = 1;
}

message GetSearchFiltersRequest {
  string type = 1; // optional
}

message GetSearchFiltersResponse {
  repeated FilterCategory categories = 1;
  repeated FilterType types = 2;
}

message FilterCategory {
  string name = 1;
  string display_name = 2;
  int32 count = 3;
}

message FilterType {
  string name = 1;
  string display_name = 2;
  int32 count = 3;
}

message GetSearchHistoryRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetSearchHistoryResponse {
  repeated SearchHistoryItem items = 1;
  int32 total = 2;
}

message SearchHistoryItem {
  string id = 1;
  string query = 2;
  string searched_at = 3;
  int32 results_count = 4;
}

message SaveSearchRequest {
  string user_id = 1;
  string query = 2;
  int32 results_count = 3;
}

message SaveSearchResponse {
  string id = 1;
}

message ClearSearchHistoryRequest {
  string user_id = 1;
}

message ClearSearchHistoryResponse {
  int32 cleared_count = 1;
}

message DeleteSearchHistoryItemRequest {
  string user_id = 1;
  string item_id = 2;
}

message DeleteSearchHistoryItemResponse {
}

message GetTrendingSearchesRequest {
  string period = 1; // day, week, month
  int32 limit = 2;
}

message GetTrendingSearchesResponse {
  repeated TrendingSearch searches = 1;
}

message TrendingSearch {
  string query = 1;
  int32 count = 2;
  float growth = 3; // percentage growth
}

service SearchService {
  // Search operations
  rpc Search(SearchRequest) returns (SearchResponse);
  rpc GetSearchSuggestions(GetSearchSuggestionsRequest) returns (GetSearchSuggestionsResponse);
  rpc GetSearchFilters(GetSearchFiltersRequest) returns (GetSearchFiltersResponse);
  
  // Search history
  rpc GetSearchHistory(GetSearchHistoryRequest) returns (GetSearchHistoryResponse);
  rpc SaveSearch(SaveSearchRequest) returns (SaveSearchResponse);
  rpc ClearSearchHistory(ClearSearchHistoryRequest) returns (ClearSearchHistoryResponse);
  rpc DeleteSearchHistoryItem(DeleteSearchHistoryItemRequest) returns (DeleteSearchHistoryItemResponse);
  
  // Analytics
  rpc GetTrendingSearches(GetTrendingSearchesRequest) returns (GetTrendingSearchesResponse);
}
